--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,190 @@
     </footer>
 
     <script>
-        const _0x4a2b=['addEventListener','DOMContentLoaded','getElementById','loading','classList','add','hidden','setTimeout','querySelector','lang-toggle','onclick','toggleLanguage','body','toggle','en','documentElement','setAttribute','lang','ar','dir','rtl','ltr','scroll-top','scrollTop','scrollToTop','window','scrollTo','top','behavior','smooth','scroll','pageYOffset','visible','querySelectorAll','.fade-in','IntersectionObserver','entries','forEach','entry','isIntersecting','target','threshold','rootMargin','0px 0px -50px 0px','observe','el','scrollToSection','sectionId','targetSection','scrollIntoView','block','start','keydown','key','Home','preventDefault','End','scrollHeight','error','console','log','An error occurred:','images','via.placeholder.com/85x85/FF6B35/FFFFFF?text=iTrx','Image','src','cards','.feature-card, .contact-card, .payment-card','card','index','style','animationDelay','mousedown','classList.remove','keyboard-navigation','ontouchstart','touch-device','matchMedia','(prefers-reduced-motion: reduce)','matches','reduced-motion','connection','navigator','effectiveType','slow-2g','2g','slow-connection','setViewportHeight','innerHeight','setProperty','--vh','px','resize','orientationchange','serviceWorker','load','ticking','updateScrollEffects','requestAnimationFrame','requestTick','passive','opacity','transition','opacity 1s ease'];(function(_0x2d8f05,_0x4a2b3c){const _0x2d8f=function(_0x4a2b0c){while(--_0x4a2b0c){_0x2d8f05['push'](_0x2d8f05['shift']());}};_0x2d8f(++_0x4a2b3c);}(_0x4a2b,0x1a1));const _0x2d8f=function(_0x2d8f05,_0x4a2b3c){_0x2d8f05=_0x2d8f05-0x0;let _0x4a2b0c=_0x4a2b[_0x2d8f05];return _0x4a2b0c;};window[_0x2d8f('0x0')](_0x2d8f('0x1'),function(){setTimeout(()=>{document[_0x2d8f('0x2')](_0x2d8f('0x3'))[_0x2d8f('0x4')][_0x2d8f('0x5')](_0x2d8f('0x6'));},0x5dc);});function toggleLanguage(){const _0x3f4e8a=document[_0x2d8f('0x8')](_0x2d8f('0x9'));const _0x1a7c5e=document[_0x2d8f('0xc')];if(_0x3f4e8a[_0x2d8f('0x4')]['contains'](_0x2d8f('0xd'))){_0x3f4e8a[_0x2d8f('0x4')]['remove'](_0x2d8f('0xd'));_0x1a7c5e[_0x2d8f('0xe')](_0x2d8f('0xf'),_0x2d8f('0x10'));_0x1a7c5e[_0x2d8f('0xe')](_0x2d8f('0x11'),_0x2d8f('0x12'));}else{_0x3f4e8a[_0x2d8f('0x4')][_0x2d8f('0x5')](_0x2d8f('0xd'));_0x1a7c5e[_0x2d8f('0xe')](_0x2d8f('0xf'),_0x2d8f('0xd'));_0x1a7c5e[_0x2d8f('0xe')](_0x2d8f('0x11'),_0x2d8f('0x13'));}}document[_0x2d8f('0x2')](_0x2d8f('0x14'))[_0x2d8f('0xa')]=scrollToTop;function scrollToTop(){_0x15[_0x2d8f('0x16')]({'top':0x0,_0x2d8f('0x18'):_0x2d8f('0x19')});}const _0x15=window;_0x15[_0x2d8f('0x0')](_0x2d8f('0x1a'),function(){const _0x4f3c8b=document[_0x2d8f('0x2')](_0x2d8f('0x14'));if(_0x15[_0x2d8f('0x1b')]>0x12c){_0x4f3c8b[_0x2d8f('0x4')][_0x2d8f('0x5')](_0x2d8f('0x1c'));}else{_0x4f3c8b[_0x2d8f('0x4')]['remove'](_0x2d8f('0x1c'));}});const _0x5a4d8e={'threshold':0.1,'rootMargin':_0x2d8f('0x20')};const _0x3c7a5f=new _0x2d8f('0x1f')(function(_0x1e8f7a){_0x1e8f7a[_0x2d8f('0x21')](_0x4a2b0c=>{if(_0x4a2b0c[_0x2d8f('0x23')]){_0x4a2b0c[_0x2d8f('0x24')][_0x2d8f('0x4')][_0x2d8f('0x5')](_0x2d8f('0x1c'));}});},_0x5a4d8e);document[_0x2d8f('0x1d')](_0x2d8f('0x1e'))[_0x2d8f('0x21')](_0x27=>{_0x3c7a5f[_0x2d8f('0x28')](_0x27);});function scrollToSection(_0x2a){const _0x2b=document[_0x2d8f('0x8')]('#'+_0x2a);if(_0x2b){_0x2b[_0x2d8f('0x2c')]({'behavior':_0x2d8f('0x19'),'block':_0x2d8f('0x2e')});}}document[_0x2d8f('0x0')](_0x2d8f('0x2f'),function(_0x30){switch(_0x30[_0x2d8f('0x31')]){case _0x2d8f('0x32'):_0x30[_0x2d8f('0x33')]();scrollToTop();break;case _0x2d8f('0x34'):_0x30[_0x2d8f('0x33')]();_0x15[_0x2d8f('0x16')]({'top':document[_0x2d8f('0xc')][_0x2d8f('0x35')],'behavior':_0x2d8f('0x19')});break;}});_0x15[_0x2d8f('0x0')](_0x2d8f('0x36'),function(_0x37){_0x38[_0x2d8f('0x39')](_0x2d8f('0x3a'),_0x37[_0x2d8f('0x36')]);});function preloadImages(){const _0x3b=[_0x2d8f('0x3c')];_0x3b[_0x2d8f('0x21')](_0x3d=>{const _0x3e=new _0x2d8f('0x3f')();_0x3e[_0x2d8f('0x40')]=_0x3d;});}document[_0x2d8f('0x0')](_0x2d8f('0x1'),function(){preloadImages();const _0x41=document[_0x2d8f('0x1d')](_0x2d8f('0x42'));_0x41[_0x2d8f('0x21')]((_0x43,_0x44)=>{_0x43[_0x2d8f('0x45')][_0x2d8f('0x46')]=_0x44*0.1+'s';});});document[_0x2d8f('0x0')](_0x2d8f('0x2f'),function(_0x47){if(_0x47[_0x2d8f('0x31')]==='Tab'){document[_0x2d8f('0xc')][_0x2d8f('0x4')][_0x2d8f('0x5')]('keyboard-navigation');}});document[_0x2d8f('0x0')](_0x2d8f('0x48'),function(){document[_0x2d8f('0xc')][_0x2d8f('0x49')]('keyboard-navigation');});if(_0x2d8f('0x4a')in _0x15){document[_0x2d8f('0xc')][_0x2d8f('0x4')][_0x2d8f('0x5')](_0x2d8f('0x4b'));}if(_0x15[_0x2d8f('0x4c')](_0x2d8f('0x4d'))[_0x2d8f('0x4e')]){document[_0x2d8f('0xc')][_0x2d8f('0x4')][_0x2d8f('0x5')](_0x2d8f('0x4f'));}if(_0x2d8f('0x50')in _0x51){const _0x52=_0x51[_0x2d8f('0x50')];if(_0x52[_0x2d8f('0x53')]===_0x2d8f('0x54')||_0x52[_0x2d8f('0x53')]===_0x2d8f('0x55')){document[_0x2d8f('0xc')][_0x2d8f('0x4')][_0x2d8f('0x5')](_0x2d8f('0x56'));}}function _0x57(){const _0x58=_0x15[_0x2d8f('0x59')]*0.01;document[_0x2d8f('0xc')][_0x2d8f('0x45')][_0x2d8f('0x5a')](_0x2d8f('0x5b'),_0x58+_0x2d8f('0x5c'));}_0x57();_0x15[_0x2d8f('0x0')](_0x2d8f('0x5d'),_0x57);_0x15[_0x2d8f('0x0')](_0x2d8f('0x5e'),_0x57);if(_0x2d8f('0x5f')in _0x51){_0x15[_0x2d8f('0x0')](_0x2d8f('0x60'),function(){});}let _0x61=![];function _0x62(){_0x61=![];}function _0x63(){if(!_0x61){_0x64(_0x62);_0x61=!![];}}const _0x64=requestAnimationFrame;_0x15[_0x2d8f('0x0')](_0x2d8f('0x1a'),_0x63,{'passive':!![]});_0x15[_0x2d8f('0x0')](_0x2d8f('0x60'),function(){document[_0x2d8f('0xc')][_0x2d8f('0x45')][_0x2d8f('0x65')]='0';_0x7(()=>{document[_0x2d8f('0xc')][_0x2d8f('0x45')][_0x2d8f('0x66')]=_0x2d8f('0x67');document[_0x2d8f('0xc')][_0x2d8f('0x45')][_0x2d8f('0x65')]='1';},0x64);});
+        // Loading Screen
+        window.addEventListener('DOMContentLoaded', function() {
+            setTimeout(() => {
+                document.getElementById('loading').classList.add('hidden');
+            }, 1500);
+        });
+
+        // Language Toggle Function
+        function toggleLanguage() {
+            const body = document.querySelector('body');
+            const html = document.documentElement;
+            
+            if (body.classList.contains('en')) {
+                body.classList.remove('en');
+                html.setAttribute('lang', 'ar');
+                html.setAttribute('dir', 'rtl');
+            } else {
+                body.classList.add('en');
+                html.setAttribute('lang', 'en');
+                html.setAttribute('dir', 'ltr');
+            }
+        }
+
+        // Scroll to Top Function
+        function scrollToTop() {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        }
+
+        // Show/Hide Scroll to Top Button
+        window.addEventListener('scroll', function() {
+            const scrollTopBtn = document.getElementById('scrollTop');
+            if (window.pageYOffset > 300) {
+                scrollTopBtn.classList.add('visible');
+            } else {
+                scrollTopBtn.classList.remove('visible');
+            }
+        });
+
+        // Intersection Observer for Fade-in Animation
+        const observerOptions = {
+            threshold: 0.1,
+            rootMargin: '0px 0px -50px 0px'
+        };
+
+        const observer = new IntersectionObserver(function(entries) {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('visible');
+                }
+            });
+        }, observerOptions);
+
+        // Observe all fade-in elements
+        document.querySelectorAll('.fade-in').forEach(el => {
+            observer.observe(el);
+        });
+
+        // Smooth Scroll to Section
+        function scrollToSection(sectionId) {
+            const targetSection = document.getElementById(sectionId);
+            if (targetSection) {
+                targetSection.scrollIntoView({
+                    behavior: 'smooth',
+                    block: 'start'
+                });
+            }
+        }
+
+        // Keyboard Navigation
+        document.addEventListener('keydown', function(e) {
+            switch(e.key) {
+                case 'Home':
+                    e.preventDefault();
+                    scrollToTop();
+                    break;
+                case 'End':
+                    e.preventDefault();
+                    window.scrollTo({
+                        top: document.body.scrollHeight,
+                        behavior: 'smooth'
+                    });
+                    break;
+            }
+        });
+
+        // Error Handling
+        window.addEventListener('error', function(error) {
+            console.log('An error occurred:', error);
+        });
+
+        // Preload Images
+        function preloadImages() {
+            const images = ['https://via.placeholder.com/85x85/FF6B35/FFFFFF?text=iTrx'];
+            images.forEach(src => {
+                const img = new Image();
+                img.src = src;
+            });
+        }
+
+        // Initialize on DOM Load
+        document.addEventListener('DOMContentLoaded', function() {
+            preloadImages();
+            
+            // Stagger animation delays for cards
+            const cards = document.querySelectorAll('.feature-card, .contact-card, .payment-card');
+            cards.forEach((card, index) => {
+                card.style.animationDelay = (index * 0.1) + 's';
+            });
+        });
+
+        // Accessibility: Keyboard Navigation Support
+        document.addEventListener('keydown', function(e) {
+            if (e.key === 'Tab') {
+                document.body.classList.add('keyboard-navigation');
+            }
+        });
+
+        document.addEventListener('mousedown', function() {
+            document.body.classList.remove('keyboard-navigation');
+        });
+
+        // Touch Device Detection
+        if ('ontouchstart' in window) {
+            document.body.classList.add('touch-device');
+        }
+
+        // Reduced Motion Support
+        if (window.matchMedia('(prefers-reduced-motion: reduce)').matches) {
+            document.body.classList.add('reduced-motion');
+        }
+
+        // Connection Speed Detection
+        if ('connection' in navigator) {
+            const connection = navigator.connection;
+            if (connection.effectiveType === 'slow-2g' || connection.effectiveType === '2g') {
+                document.body.classList.add('slow-connection');
+            }
+        }
+
+        // Viewport Height Fix for Mobile
+        function setViewportHeight() {
+            const vh = window.innerHeight * 0.01;
+            document.body.style.setProperty('--vh', vh + 'px');
+        }
+
+        setViewportHeight();
+        window.addEventListener('resize', setViewportHeight);
+        window.addEventListener('orientationchange', setViewportHeight);
+
+        // Service Worker Registration (if available)
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', function() {
+                // Service worker code would go here
+            });
+        }
+
+        // Performance Optimization: Throttled Scroll
+        let ticking = false;
+
+        function updateScrollEffects() {
+            // Update scroll-based effects here
+            ticking = false;
+        }
+
+        function requestTick() {
+            if (!ticking) {
+                requestAnimationFrame(updateScrollEffects);
+                ticking = true;
+            }
+        }
+
+        window.addEventListener('scroll', requestTick, { passive: true });
+
+        // Page Load Animation
+        window.addEventListener('load', function() {
+            document.body.style.opacity = '0';
+            setTimeout(() => {
+                document.body.style.transition = 'opacity 1s ease';
+                document.body.style.opacity = '1';
+            }, 100);
+        });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'967d10c225c45051',t:'MTc1Mzk2NDU5MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'967d13c732a43f39',t:'MTc1Mzk2NDcxNC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
