--- a/index.html
+++ b/index.html
@@ -838,14 +838,16 @@
         let currentUser = null;
         let currentUserRole = null;
 
-        // Save data to localStorage and generate file
+        // Save data to localStorage and generate file for admins only
         function saveData() {
             localStorage.setItem('itrx_users', JSON.stringify(users));
             localStorage.setItem('itrx_orders', JSON.stringify(orders));
             localStorage.setItem('itrx_portfolio', JSON.stringify(portfolioItems));
             
-            // Auto-generate and download iTrxOrders.txt file
-            generateOrdersFile();
+            // Auto-generate and download iTrxOrders.txt file only for admin users
+            if (currentUser && users[currentUser] && users[currentUser].role !== 'user') {
+                generateOrdersFile();
+            }
         }
 
         // Generate and download iTrxOrders.txt file
@@ -1428,5 +1430,5 @@
             updateAnalytics();
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9680cb0762c8f445',t:'MTc1NDAwMzY3Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9680d0d242d6ea75',t:'MTc1NDAwMzkxNS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
